--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <a style="color: white;" href="https://ariafm.codeberg.page"> Codeberg mirror </a>//
 <a style="color: white;" href="https://ariafm.github.io"> Github mirror </a>-</p>
 
-<p <a href="https://ariafm.neocities.org">© Ariafm 2025-2026</a> — <a style="color: white;" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons Attribution 4.0 International License.</a></p></div>
-    
+<p <a href="https://ariafm.neocities.org">© Ariafm 2025-2026</a> — <a style="color: white;" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons Attribution 4.0 International License.</a></p>
+<p style="color: gray;">You are viewing the Github mirror of this web page</p></div>
 </body>
 </html>
 
